--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  checkstyle:
 
     runs-on: ubuntu-latest
 
@@ -25,3 +25,10 @@ jobs:
       uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
       with:
         arguments: checkstyleMain
+    - name: Upload Report
+      uses: actions/upload-artifact@v1
+      if: always()
+      with:
+        name: test results
+        path: build/reports/checkstyle
+
