--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -30,5 +30,5 @@ jobs:
       if: always()
       with:
         name: test results
-        path: build/reports/checkstyle
+        path: build/reports/checkstyle/main.html
 
