--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,10 +1,7 @@
 name: Checkstyle
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 permissions:
   contents: read
@@ -21,14 +18,13 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-      with:
-        arguments: checkstyleMain
-    - name: Upload Report
-      uses: actions/upload-artifact@v1
+    - name: Run check style
+      uses: nikitasavinov/checkstyle-action@master
       if: always()
       with:
-        name: test results
-        path: build/reports/checkstyle/main.html
-
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        reporter: 'github-pr-check'
+        tool_name: 'reviewdog'
+        checkstyle_config: 'config/checkstyle/checkstyle.xml'
+        workdir: 'src/main'
+        level: error
