--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -28,3 +28,18 @@ jobs:
         checkstyle_config: 'config/checkstyle/checkstyle.xml'
         workdir: 'src/main'
         level: error
+
+    - name: Discord Notification
+      uses: sarisia/actions-status-discord@v1
+      if: always()
+      with:
+        webhook: ${{ secrets.DISCORD_WEBHOOK }}
+        status: ${{ job.status }}
+        content: "Hey <@316911818725392384>"
+        title: "deploy"
+        description: "Build and deploy to GitHub Pages"
+        image: ${{ secrets.EMBED_IMAGE }}
+        color: 0x0000ff
+        url: "https://github.com/sarisia/actions-status-discord"
+        username: GitHub Actions
+        avatar_url: ${{ secrets.AVATAR_URL }}
