--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -38,8 +38,6 @@ jobs:
         content: "Hey <@316911818725392384>"
         title: "deploy"
         description: "Build and deploy to GitHub Pages"
-        image: ${{ secrets.EMBED_IMAGE }}
-        color: 0x0000ff
+        color: "#cb88d2"
         url: "https://github.com/sarisia/actions-status-discord"
         username: GitHub Actions
-        avatar_url: ${{ secrets.AVATAR_URL }}
