--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -35,7 +35,7 @@ jobs:
       with:
         webhook: ${{ secrets.DISCORD_WEBHOOK }}
         status: ${{ job.status }}
-        content: "Hey <@316911818725392384>"
+        content: "Hey <@everyone>"
         title: "deploy"
         description: "Build and deploy to GitHub Pages"
         color: "#cb88d2"
